# python-poppler

./: .bzrignore  AUTHORS  ChangeLog  Makefile.am  NEWS  aclocal.m4  arg-types.py  configure.ac  poppler.defs  poppler.override  popplermodule.c
demo/: demo-poppler.py
